--- a/config.json
+++ b/config.json
@@ -1,11 +1,13 @@
 {
   "port": "3000",
-  "adminAccount": "crper@outlook.com",
+  "adminAccount": "admin@admin.com",
   "versionNotify": true,
   "db": {
-    "servername": "yapi-mongo",
-    "DATABASE": "yapi",
-    "port": 27017
+    "servername": "mongodb",
+    "DATABASE":  "yapi",
+    "port": 27017,
+    "user": "",
+    "pass": ""
   },
   "mail": {
     "enable": false,
