--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,15 +7,21 @@ services:
         source: ./data/db
         target: /data/db
   web:
-    image: tenlee/yapi:1.6.1
+    image: tenlee/yapi:1.6.2
+    #command: /bin/bash -c "[ ! -e /home/yapi/log/init.lock ] && npm run install-server && touch /home/yapi/log/init.lock; npm run start"
+    entrypoint: /yapi/entrypoint.sh
     links:
       - mongodb:mongodb
     ports:
       - 3000:3000
+    tty: true
     volumes:
       - type: bind
         source: ./config.json
         target: /yapi/config.json
       - type: bind
         source: ./data/yapi
-        target: /home/yapi/log
+        target: /yapi/log
+      - type: bind
+        source: ./entrypoint.sh
+        target: /yapi/entrypoint.sh
